it now generates reports correctly

--- a/config.json.template
+++ b/config.json.template
@@ -1,8 +1,6 @@
 {
-  "inputs": [
-  
-  ],
-  "outputs": [
-  
-  ]
+  "inputs": [{
+   "type": "papertrail",
+   "token": "YOUR_TOKEN_HERE"
+    }]
 }
